app/client/src/scss/main.scss
@use "variables" as *;
@use "fonts" as *;
@use "glightbox/dist/css/glightbox.css";
@use "normalize";
@use 'swiper/css/bundle';
@use "typography" as *;

@use "Forms";
@use "Animations";
@use "Icons";
@use "YoutubeConsent";

@use "layout/Footer";
@use "layout/Header";
@use "layout/DateFrame";

@use "elements/CharacterCarouselElement";
@use "elements/ImageBannerElement";
@use "elements/FactsElement";

@use "layout/team/TeamOverview";
@use "layout/team/TeamDetails";

@use "elements/TextImageElement";
@use "elements/TeaserElement";
@use "elements/ReferencesElement";
@use "elements/ReferenceSliderElement";
@use "elements/SocialBannerElement";
@use "elements/TimelineElement";
@use "elements/FAQElement";
@use "elements/SpaceElement";
@use "elements/HeroVideoElement";
@use "elements/PressImagesElement";
@use "elements/VideoElement";
@use "elements/HeroSliderElement";
@use "elements/WikiElement";
@use "elements/ApplicationElement";

@use "pages/ApplicationPage";

@use "layout/Feedback";
@use "layout/PhotoboxGallery";

@use "layout/Events/EventTicket";
@use "layout/Events/EventAdmin";
@use "layout/Events/Events";

@use "layout/POS";
@use "layout/StatisticsPage";

@use "layout/FleaMarket";

@use "wiki/WikiPage";


@view-transition { navigation: auto; }

*{
    margin:	0;
    padding: 0;
    box-sizing: border-box;
}

html {
    background-color: var(--ColorBackground);
}

body{
    margin-top: 100px;
    min-height: calc(100vh - 100px);
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: auto 1fr auto;
    grid-template-areas:
        "header"
        "content"
        "footer";
    width: 100%;
    overflow-x: hidden;

    .menu--fixed &{
        margin-top: 50px;
    }

    .area_header {
        grid-area: header;
        z-index: 100;
    }

    .area_content {
        grid-area: content;
        margin-top: -100px;
        width: 100%;
    }

    .area_footer {
        grid-area: footer;
        text-align: center;
        height: 120px;
        margin-top: 40px;
    }

    .grid-layout {
        display: grid;
        gap: 0 30px;
        grid-template-columns: repeat(12, 1fr);
        grid-template-rows: auto auto auto;
        max-width: var(--MaxWidthContent);
        margin: 0 auto;
        align-items: start;
    }
}


section {
    padding: 25px 20px;
    margin: 0 auto;
}

.section_content{
    max-width: var(--MaxWidthContent);
    margin: 0 auto;
}

.social_icon{
    display: block;
    width: 35px;
    height: 35px;
    margin: 10px;
    transition: transform 0.1s ease-in-out;

    img{
        width: 100%;
        height: 100%;
        object-fit: contain;
    }

    &:hover{
        transform: scale(1.1);
    }

    @include media(max-medium) {
        height: 35px;
        width: 35px;
        margin: 5px;
    }
}

.gslide-desc{
    color: var(--ColorBlack);
}

.ElementalArea-hiddenElementNotice{
    background-color: #ed7903;
    color: white;
    padding: 20px;
}

